worked on some more spacing issues and corrected some text

--- a/assets/baseball.css
+++ b/assets/baseball.css
@@ -20,14 +20,14 @@ header{
 header h1{
     font-size: 40px;
     padding-bottom: 10px;
-    
+
 }
 body{
-    
+
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
-    
+
 }
 h1{
     text-align: center;
@@ -44,9 +44,9 @@ h1{
     margin: 10px;
     /* display: block; */
     text-align: center;
-    min-width: 400px;
-    
-    
+    /* min-width: 300px; */
+
+
 }
 .division img{
     width: 100%;
@@ -55,7 +55,7 @@ h1{
 a{
     text-decoration: none;
     color: black;
-   
+
 }
 
 
